--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="tej.JPG" alt="..." />
+                <img class="masthead-avatar mb-5" src="tej.JPG" alt="tej images" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Tej Bahadur Thapa</h1>
                 <!-- Masthead Subheading-->
@@ -40,7 +40,7 @@
         </header>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; 2022 Tej Bahadur Thaps </small></div>
+            <div class="container"><small>Copyright &copy; 2022 Tej Bahadur Thapa </small></div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
